src/objects/Directory__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Agency_Website__c</fullName>
        <description>Related agency website.</description>
        <label>Agency Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Autopublish__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator when an article needs to be auto published.</description>
        <label>Autopublish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFO_agency__c</fullName>
        <description>Indicates whether the agency is one of those listed in the CFO Act of 1990.</description>
        <label>CFO agency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_rcords__c</fullName>
        <description>Any children directory records (for example, FDA for the HHS).</description>
        <label>Child records</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City for the record’s address.</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_In_Person__c</fullName>
        <label>Contact In-Person:</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact_via_the_Web__c</fullName>
        <label>Contact via the Web:</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Directory_Article_ID__c</fullName>
        <label>Directory Article ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Type__c</fullName>
        <description>What type of directory record is the content item.</description>
        <label>Directory Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Better Business Bureaus</fullName>
                </value>
                <value>
                    <fullName>Car Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Consumer Organization</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Federal Agency</fullName>
                </value>
                <value>
                    <fullName>Government Consumer Protection Office</fullName>
                </value>
                <value>
                    <fullName>State Banking Authority</fullName>
                </value>
                <value>
                    <fullName>State Government Agency</fullName>
                </value>
                <value>
                    <fullName>State Insurance Regulator</fullName>
                </value>
                <value>
                    <fullName>State Securities Administrator</fullName>
                </value>
                <value>
                    <fullName>State Utility Commission</fullName>
                </value>
                <value>
                    <fullName>Trade Association</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Donated_money__c</fullName>
        <description>Whether the entity represented by the directory record is a member of SOCAP.</description>
        <label>Donated money</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_mail_address__c</fullName>
        <description>E-mail addresses for the record (can include multiple addresses separated by &lt;br /&gt;)</description>
        <label>E-mail address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Government_branch__c</fullName>
        <description>What branch of government does the record belong too.</description>
        <label>Government branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Legislative</fullName>
                </value>
                <value>
                    <fullName>Judicial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_By__c</fullName>
        <description>How to group the record in certain presentation outputs.</description>
        <label>Group By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Bureaus</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inventory_URL__c</fullName>
        <description>A URL that points to the agency’s program inventory on Performance.gov.</description>
        <label>Inventory URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Marketing_Team__c</fullName>
        <description>Whether the marketing team 
should be notified that this digital 
asset might be worthwhile to 
highlight</description>
        <label>Notify Marketing Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_record__c</fullName>
        <description>The parent directory record (for example, HHS for FDA).</description>
        <label>Parent record</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Directory asset phone number.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <description>Phone numbers for the record (can include multiple numbers separated by &lt;br /&gt;).</description>
        <label>Phone number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Agencies__c</fullName>
        <description>The directory asset&apos;s related agencies.</description>
        <label>Related Agencies</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SCOAP_member__c</fullName>
        <description>Whether the entity represented by the directory record is a member of SOCAP.</description>
        <label>SCOAP member</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMS_services__c</fullName>
        <description>Text services offered by the directory record.</description>
        <label>SMS services</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shown_on_AZ_Index__c</fullName>
        <description>Whether the directory record should be shown on A-Z indices</description>
        <label>Shown on AZ Index</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State for the record’s address.</description>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <description>First street address for the record’s address.</description>
        <label>Street 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <description>Second street address for the record’s address.</description>
        <label>Street 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <description>Subdivision for the record’s address.</description>
        <label>Subdivision</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synonym_1__c</fullName>
        <description>Another name for the directory record</description>
        <label>Synonym 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synonym_2__c</fullName>
        <description>Another name for the directory record.</description>
        <label>Synonym 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synonym_3__c</fullName>
        <description>Another name for the directory record.</description>
        <label>Synonym 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTY_number__c</fullName>
        <description>TTY numbers for the record (can include multiple numbers separated by &lt;br /&gt;).</description>
        <label>TTY number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Asset_Body__c</fullName>
        <label>Text Asset Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Toll_free_number__c</fullName>
        <description>Toll-free Phone numbers for the record (can include multiple numbers separated by &lt;br /&gt;).</description>
        <label>Toll free number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Directory asset website url.</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Zip code for the record’s address.</description>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Directory</label>
    <pluralLabel>Directories</pluralLabel>
</CustomObject>